Renaming repository and change service name
